FullQa New/src/objects/Functional_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Software_Installation_Demo_Note__c</fullName>
        <label>Software Installation Demo Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Software_Installation_Demo__c</fullName>
        <inlineHelpText>Customers should have an easy and trouble free installation of the software - Demonstrate and document installation of software (Install Shield or equivalent where applicable)</inlineHelpText>
        <label>Software Installation Demo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Stop_Service_Note__c</fullName>
        <label>Start/Stop Service Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Stop_Service__c</fullName>
        <inlineHelpText>Must contain the ability to start and Stop the service prior to going live.</inlineHelpText>
        <label>Start/Stop Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_of_Cert_Requests_Modifie_Note__c</fullName>
        <label>Status of Cert Requests - Modifie Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_of_Cert_Requests_Modifie__c</fullName>
        <inlineHelpText>Status can be modified (e.g. user can close them)</inlineHelpText>
        <label>Status of Cert Requests - Modifie</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_of_Cert_Requests_Retrieve_Note__c</fullName>
        <label>Status of Cert Requests - Retrieve Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_of_Cert_Requests_Retrieve__c</fullName>
        <inlineHelpText>Status can be retrieved from the customer record</inlineHelpText>
        <label>Status of Cert Requests - Retrieve</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_of_Exemption_Certificates_Note__c</fullName>
        <label>Status of Exemption Certificates Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_of_Exemption_Certificates__c</fullName>
        <inlineHelpText>Status of Exemption Certificates and details can be retrieved.</inlineHelpText>
        <label>Status of Exemption Certificates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Calculation_Disable_Option_Note__c</fullName>
        <label>Tax Calculation Disable Option Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Calculation_Disable_Option__c</fullName>
        <inlineHelpText>The user must have an option to turn on or off the AvaTax Calculation service independent of any other Avalara product or service</inlineHelpText>
        <label>Tax Calculation Disable Option</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Calculation_Disable_calc_Note__c</fullName>
        <label>Tax Calculation - Disable calc Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Calculation_Disable_calculation__c</fullName>
        <description>The user must have an option to turn on or off the AvaTax for Comms Calculation service independent of any other Avalara product</description>
        <inlineHelpText>The user must have an option to turn on or off the AvaTax for Comms Calculation service independent of any other Avalara product</inlineHelpText>
        <label>Tax Calculation - Disable calculation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Included_Note__c</fullName>
        <label>Tax Included Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Included__c</fullName>
        <label>Tax Included</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Service_Note__c</fullName>
        <label>Test Service Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Service__c</fullName>
        <inlineHelpText>Must contain the ability to test the service to verify that the service is accepting incoming calls.</inlineHelpText>
        <label>Test Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Implementation_Guide_Note__c</fullName>
        <label>User Implementation Guide Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Implementation_Guide__c</fullName>
        <inlineHelpText>The User Implementation Guide should contain screenshots and information allowing the end user to configure for AvaTax including where the company code is entered, where the credentials are entered and where tax codes can be mapped.</inlineHelpText>
        <label>User Implementation Guide</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <referenceTo>Version__c</referenceTo>
        <relationshipLabel>Functional Checklists</relationshipLabel>
        <relationshipName>Functional_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Functional Checklist</label>
    <nameField>
        <label>Functional Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functional Checklists</pluralLabel>
    <recordTypes>
        <fullName>Address_Validation_Checklist</fullName>
        <active>true</active>
        <description>Functional Checklist for Address Validation</description>
        <label>Address Validation Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>AvaTax_Communication_Checklist</fullName>
        <active>true</active>
        <description>Functional Checklist for Communication Tax</description>
        <label>AvaTax Communication Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>AvaTax_Global_Checklist</fullName>
        <active>true</active>
        <description>Functional Checklist for Global</description>
        <label>AvaTax Global Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Avatax_Calc_Checklist</fullName>
        <active>true</active>
        <description>Functional Checklist for AvaTax Calc</description>
        <label>AvaTax Calc Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>CertCapture_Checklist</fullName>
        <active>true</active>
        <description>Functional Checklist for CertCapture</description>
        <label>CertCapture Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>POS_Checklist</fullName>
        <active>true</active>
        <description>Functional Checklist for POS with AvaTax Local</description>
        <label>AvaTax POS Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Returns_Checklist</fullName>
        <active>true</active>
        <description>Functional Checklist for AvaTax Returns</description>
        <label>AvaTax Returns Checklist</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>